# flocrawl

./: .env.example  .gitignore  DEPLOY_TO_HUGGINGFACE.md  Dockerfile  README.md  pyproject.toml  requirements-browser.txt  requirements.txt
.github/workflows/: Build-and-push.yml
src/flocrawl/: __init__.py  __main__.py  config.py  scraper.py  search.py  server.py
