[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flocrawl"
version = "1.0.0"
description = "Flocrawl MCP Server - Web search and scraping for LLM agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastmcp>=0.2.0",
    "mcp>=1.0.0",
    "httpx[http2]>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "ddgs>=8.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]

[tool.setuptools.packages.find]
where = ["src"]
